[project]
name = "sik-stochastic-tests"
version = "0.1.3"
description = "A pytest plugin for testing stochastic systems like LLMs, providing statistical confidence through multiple test runs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest-asyncio>=0.25.3",
    "pytest>=8.3.4",
    "nest-asyncio>=1.6.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.6",
    "pip>=25.0.1",
    "python-dotenv>=1.0.1",
]

[project.entry-points.pytest11]
stochastic = "sik_stochastic_tests.plugin"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sik_stochastic_tests"]

[build-system]
requires = ["hatchling>=1.17.1"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_default_fixture_loop_scope = "function"
